<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Power Cost Estimator</string>
	<string name="calculate">Calculate</string>
	<string name="profiles">Profiles</string>
	<string name="settings">Settings</string>
	<string name="help">Help</string>
	<string name="listview_add_new_profile">+ Add New</string>
	<string name="label_new_profile">New Profile</string>
	<string name="label_edit_profile">Edit Profile</string>
	<string name="label_delete_profile">Delete Profile</string>
	<string name="label_profile_summary">Profile Summary</string>
	<string name="label_profile_name">Profile Name:</string>
	<string name="hint_profile_name">Profile Name (e.g. Home)</string>
	<string name="label_price_per_kwh">Price per kWh:</string>
	<string name="hint_price_per_kwh">Price per kWh (e.g. 0.05)</string>
	<string name="label_device">Device Name</string>
	<string name="label_power_full">Power Usage:</string>
	<string name="hint_power_full">Power Usage (watts)</string>
	<string name="label_time_full">Usage Time:</string>
	<string name="hint_time_full">Time (hours per day)</string>
	<string name="label_power_standby">Standby Power Usage (optional):</string>
	<string name="hint_power_standby">Standby Power Usage (watts)</string>
	<string name="label_time_standby">Standby Time (optional):</string>
	<string name="hint_time_standby">Standby Time (hours per day)</string>
	<string name="label_add_to_profile">Save to profile</string>
	<string name="label_choose_profile">Choose Profile</string>
	<string name="label_name_device">Name Device</string>
	<string name="label_edit_device">Edit Device</string>
	<string name="label_delete_device">Delete Device</string>
	<string name="label_summary">%1$s Summary</string>
	<string name="daily">Daily: %1$s</string>
	<string name="monthly">Monthly: %1$s</string>
	<string name="yearly">Yearly: %1$s</string>
	<string name="total">Total</string>
	<string name="breakdown">Breakdown by total cost</string>
	<string name="label_export_profile">Export Profile</string>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="done">Done</string>
	<string name="submit">Submit</string>
	<string name="show_chart">Show Chart</string>
	<string name="export">Export</string>

	<string name="settings_clear_data">Clear Data</string>
	<string name="settings_clear_data_desc">Erases all profile and device data</string>
	<string name="settings_clear_data_warn">WARNING: this will erase all profile and device data. Proceed?</string>
	<string name="settings_about">About</string>
	<string name="settings_about_desc">Power Cost Estimator was created by Ryan Berger. All right reserved.</string>

	<string-array name="devices_array">
		<item>Air Conditioner</item>
		<item>Cable Box</item>
		<item>Cable Modem</item>
		<item>Cell Phone</item>
		<item>Clock</item>
		<item>Clothes Dryer</item>
		<item>Coffee Maker</item>
		<item>Computer Monitor</item>
		<item>Ceiling Fan</item>
		<item>Desktop Computer</item>
		<item>Dishwasher</item>
		<item>DVD Player</item>
		<item>DVR</item>
		<item>Fax Machine</item>
		<item>Furnace</item>
		<item>Game Console</item>
		<item>Humidifier</item>
		<item>Lamp</item>
		<item>Laptop</item>
		<item>Light Bulb</item>
		<item>Microwave</item>
		<item>Oven</item>
		<item>Printer</item>
		<item>Radio</item>
		<item>Refrigerator</item>
		<item>Router</item>
		<item>Space Heater</item>
		<item>Television</item>
		<item>Toaster</item>
		<item>Washing Machine</item>
		<item>Window Unit AC</item>
	</string-array>
	
	<string name="decimalInput">1234567890.</string>

	<string name="success_add_to_profile">Successfully added %1$s to %2$s.</string>
	<string name="success_export">Successfully wrote file to: %1$s</string>
	<string name="warning_delete_profile">Are you sure you want to delete this profile?</string>
	<string name="warning_delete_device">Are you sure you want to delete this device?</string>
	<string name="warning_no_devices">You don\'t have any devices in this profile yet. Try adding some under the Calculate tab.</string>
	<string name="error_generic">ERROR: %1$s</string>
	<string name="error_empty_profile_name_field">ERROR: required field Name not filled out!</string>
	<string name="error_empty_cost_field">ERROR: required field Cost not filled out!</string>
	<string name="error_no_profiles">ERROR: cannot calculate until at least one profile has been added!</string>
	<string name="error_empty_power_field">ERROR: required field Power Usage not filled out!</string>
	<string name="error_empty_time_field">ERROR: required field Time not filled out!</string>
	<string name="error_over_24_hours">ERROR: Time cannot exceed 24 hours!</string>
	<string name="error_empty_device_name_field">ERROR: device name cannot be blank!</string>
	<string name="error_duplicate_profile_name">ERROR: profile name must be unique!</string>
	<string name="format_device_summary">%1$s\nNormal: %2$s W/%3$s hours\nStandby: %4$s W/%5$s hours\nDaily: %6$s\nMonthly: %7$s\nYearly: %8$s</string>
	<string name="csv_headings">Device Name#Normal Usage (watts)#Normal Time#Standby Usage (watts)#Standby Time#Daily Cost#Monthly Cost#Yearly Cost</string>
	

</resources>