<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView_summary_alert" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:scrollbars="vertical">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<TextView android:id="@+id/textView_alert_device_name"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/label_profile_name" />

		<EditText android:id="@+id/editText_alert_device_name"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_profile_name" android:singleLine="true"
			android:imeOptions="actionNext" />

		<TextView android:id="@+id/textView_alert_power_full"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/label_power_full" />

		<EditText android:id="@+id/editText_alert_power_full"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_power_full" android:inputType="phone"
			android:digits="@string/decimalInput" android:imeOptions="actionNext" />

		<TextView android:id="@+id/textView_alert_power_full"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/label_time_full" />

		<EditText android:id="@+id/editText_alert_time_full"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_time_full" android:inputType="phone"
			android:digits="@string/decimalInput" android:imeOptions="actionNext"
			android:maxLength="2" />

		<TextView android:id="@+id/textView_alert_power_standby"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/label_power_standby" />

		<EditText android:id="@+id/editText_alert_power_standby"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_power_standby" android:inputType="phone"
			android:digits="@string/decimalInput" android:imeOptions="actionNext" />

		<TextView android:id="@+id/textView_alert_time_standby"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/label_time_standby" />

		<EditText android:id="@+id/editText_alert_time_standby"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_time_standby" android:inputType="phone"
			android:digits="@string/decimalInput" android:imeOptions="actionDone" />

	</LinearLayout>

</ScrollView>