<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView_profiles_alert" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:scrollbars="vertical">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<TextView android:id="@+id/textView_profile_name"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/label_profile_name" />

		<EditText android:id="@+id/editText_profile_name"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_profile_name" android:singleLine="true" android:imeOptions="actionNext" />

		<TextView android:id="@+id/textView_price_per_kwh"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/label_price_per_kwh" />

		<EditText android:id="@+id/editText_price_per_kwh"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hint_price_per_kwh" android:inputType="phone"
			android:digits="@string/decimalInput" android:imeOptions="actionDone" />
		
	</LinearLayout>

</ScrollView>