<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        	<AutoCompleteTextView
        	    android:id="@+id/autoCompleteTextView_device"
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:hint="@string/label_device"
        	    android:inputType="textAutoComplete" />
        	<EditText
	            android:id="@+id/editText_power_full"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/label_power_full"
	            android:inputType="numberDecimal" />
        	<EditText
	            android:id="@+id/editText_time_full"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/label_time_full"
	            android:inputType="numberDecimal" />
        	<EditText
	            android:id="@+id/editText_power_standby"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/label_power_standby"
	            android:inputType="numberDecimal" />
        	<EditText
	            android:id="@+id/editText_time_standby"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/label_time_standby"
	            android:inputType="numberDecimal" />

        	<RelativeLayout android:layout_width="fill_parent"
		        android:orientation="vertical"
		        android:layout_height="fill_parent">
	        	<CheckBox
	        	    android:id="@+id/checkBox_add_to_profile"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/label_add_to_profile" />

	        	<!-- <Spinner
	        	    android:id="@+id/spinner_profile"
	        	    android:layout_width="fill_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_toRightOf="@+id/checkBox_add_to_profile"
	        	    android:entries="@array/devices_array" >

	        	    </Spinner> -->
        	</RelativeLayout>
        	
        	<Button
	              android:id="@+id/button_submit"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:text="@string/submit" />
    </LinearLayout>
</ScrollView>